# ngx-balancer-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: ewma.md
src/: ewma.rs  least_conn.rs  lib.rs  peer.rs  policy.rs
src/ewma/: mod.rs  slot.rs
tests/: run.sh
tests/fuzz/: README.md  chaos_backend.pl  chaos_backend.py  fuzz_client.py  nginx.conf  run.sh
tests/t/: balancer_rs.t  balancer_rs_ewma.t  balancer_rs_ewma_distribution.t  balancer_rs_ewma_retry.t  balancer_rs_ewma_score.t  balancer_rs_ewma_sla_recovery.t  balancer_rs_ewma_zone.t  balancer_rs_least_conn.t
